--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,3 +1,2 @@
-source "https://rubygems.org"
-gemspec
-gem "jekyll-materialdocs"
+source 'http://rubygems.org'
+gem 'github-pages', group: :jekyll_plugins
