--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -31,3 +31,5 @@ aux_links:
 
 # Color scheme currently only supports "dark" or nil (default)
 color_scheme: nil
+remote_theme: pmarsceill/just-the-docs
+
