Changes for 2021.6.1 release

--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -250,13 +250,17 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.10\packages\Rhythm\bin" /Y /I
+    <PostBuildEvent>xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.6\packages\Rhythm\bin" /Y /I
+xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.6\packages\Rhythm\bin" /Y /I
+xcopy "$(ProjectDir)bin\Release\RhythmCore.customization.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.6\packages\Rhythm\bin" /Y /I
+
+xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.10\packages\Rhythm\bin" /Y /I
 xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.10\packages\Rhythm\bin" /Y /I
 xcopy "$(ProjectDir)bin\Release\RhythmCore.customization.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Revit\2.10\packages\Rhythm\bin" /Y /I
 
-xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.6\packages\Rhythm\bin" /Y /I
-xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.6\packages\Rhythm\bin" /Y /I
-xcopy "$(ProjectDir)bin\Release\RhythmCore.customization.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.6\packages\Rhythm\bin" /Y /I</PostBuildEvent>
+xcopy "$(ProjectDir)bin\Release\RhythmCore.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.11\packages\Rhythm\bin" /Y /I
+xcopy "$(ProjectDir)bin\Release\RhythmCore.xml" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.11\packages\Rhythm\bin" /Y /I
+xcopy "$(ProjectDir)bin\Release\RhythmCore.customization.dll" "C:\Users\johnpierson\AppData\Roaming\Dynamo\Dynamo Core\2.11\packages\Rhythm\bin" /Y /I</PostBuildEvent>
   </PropertyGroup>
   <Target Name="BeforeBuild">
   </Target>
