--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -124,6 +124,8 @@
     <Reference Include="System.Drawing">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.IO.Compression, Version=4.1.2.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Forms">
       <Private>False</Private>
     </Reference>
@@ -159,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About\About.cs" />
+    <Compile Include="System\System.cs" />
     <Compile Include="GenerativeDesign\CygonRectanglePacker.cs" />
     <Compile Include="GenerativeDesign\GenerativeDesign.cs" />
     <Compile Include="GenerativeDesign\OutOfSpaceException.cs" />
