Move repos to SSD

--- a/src/RhythmCore/RhythmCore.csproj
+++ b/src/RhythmCore/RhythmCore.csproj
@@ -161,6 +161,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="About\About.cs" />
+    <Compile Include="Image\Image.cs" />
     <Compile Include="System\System.cs" />
     <Compile Include="GenerativeDesign\CygonRectanglePacker.cs" />
     <Compile Include="GenerativeDesign\GenerativeDesign.cs" />
