--- a/src/RhythmRevit2022/packages.config
+++ b/src/RhythmRevit2022/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="DynamoVisualProgramming.DynamoServices" version="2.6.1.8786" targetFramework="net48" />
   <package id="DynamoVisualProgramming.ZeroTouchLibrary" version="2.6.1.8786" targetFramework="net48" />
+  <package id="Revit_All_Main_Versions_API_x64" version="2022.1.0" targetFramework="net48" />
 </packages>
