--- a/src/RhythmUI/RhythmUI/packages.config
+++ b/src/RhythmUI/RhythmUI/packages.config
@@ -8,4 +8,5 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net471" />
   <package id="NUnit" version="2.6.3" targetFramework="net452" />
   <package id="Prism" version="4.1.0.0" targetFramework="net452" />
+  <package id="Revit_All_Main_Versions_API_x64" version="2021.1.4" targetFramework="net48" />
 </packages>
